more regressions done

--- a/Rough Work 1.ipynb
+++ b/Rough Work 1.ipynb
@@ -1873,6 +1873,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: nbconvert in /anaconda3/envs/learn-env/lib/python3.6/site-packages (5.6.0)\n",
+      "Requirement already satisfied: defusedxml in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from nbconvert) (0.6.0)\n",
+      "Requirement already satisfied: pygments in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from nbconvert) (2.2.0)\n",
+      "Requirement already satisfied: entrypoints>=0.2.2 in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from nbconvert) (0.3)\n",
+      "Requirement already satisfied: traitlets>=4.2 in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from nbconvert) (4.3.2)\n",
+      "Requirement already satisfied: nbformat>=4.4 in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from nbconvert) (4.4.0)\n",
+      "Requirement already satisfied: jinja2>=2.4 in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from nbconvert) (2.10.1)\n",
+      "Requirement already satisfied: testpath in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from nbconvert) (0.4.2)\n",
+      "Requirement already satisfied: bleach in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from nbconvert) (1.5.0)\n",
+      "Requirement already satisfied: jupyter-core in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from nbconvert) (4.4.0)\n",
+      "Requirement already satisfied: mistune<2,>=0.8.1 in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from nbconvert) (0.8.4)\n",
+      "Requirement already satisfied: pandocfilters>=1.4.1 in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from nbconvert) (1.4.2)\n",
+      "Requirement already satisfied: ipython_genutils in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from traitlets>=4.2->nbconvert) (0.2.0)\n",
+      "Requirement already satisfied: six in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from traitlets>=4.2->nbconvert) (1.11.0)\n",
+      "Requirement already satisfied: decorator in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from traitlets>=4.2->nbconvert) (4.3.0)\n",
+      "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from nbformat>=4.4->nbconvert) (3.1.1)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from jinja2>=2.4->nbconvert) (1.1.1)\n",
+      "Requirement already satisfied: html5lib!=0.9999,!=0.99999,<0.99999999,>=0.999 in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from bleach->nbconvert) (0.9999999)\n",
+      "Requirement already satisfied: setuptools in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.4->nbconvert) (40.0.0)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.4->nbconvert) (19.2.0)\n",
+      "Requirement already satisfied: pyrsistent>=0.14.0 in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.4->nbconvert) (0.15.4)\n",
+      "Requirement already satisfied: importlib-metadata in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.4->nbconvert) (0.23)\n",
+      "Requirement already satisfied: zipp>=0.5 in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from importlib-metadata->jsonschema!=2.5.0,>=2.4->nbformat>=4.4->nbconvert) (0.6.0)\n",
+      "Requirement already satisfied: more-itertools in /anaconda3/envs/learn-env/lib/python3.6/site-packages (from zipp>=0.5->importlib-metadata->jsonschema!=2.5.0,>=2.4->nbformat>=4.4->nbconvert) (7.2.0)\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 19.3.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install nbconvert"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
