--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -4,15 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predictive Modelling"
+    "# Project Review"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "readibility - create a structure and explain everything\n",
+    "visualitions - comment on what you see \n",
+    "give reasons for using other libraries that have not been covered in the course\n",
+    "don't subset the model based on prices\n",
+    "verify that everything works by git clhnoning into another location "
+   ]
   }
  ],
  "metadata": {
